Added list functionality in js by storing input values in list innerHTML

--- a/style.css
+++ b/style.css
@@ -17,11 +17,16 @@ input {
   border-radius: 5px;
 }
 
+ul {
+  list-style-type: none;
+}
+
 button {
   max-width: 70px;
   padding: 5px 0;
   background: #5d5c61;
   color: #f5f5f5;
+  font-weight: 800;
   border: none;
   border-radius: 5px;
   cursor: pointer;
