Added additional styling to <a> color and margin between links

--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ ul {
   list-style-type: none;
 }
 
+li {
+  margin-top: 3px;
+}
+
+a {
+  color: #557a95;
+}
+
 button {
   max-width: 70px;
   padding: 5px 0;
