--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@
 }
 
 body {
-  max-width: 400px;
+  min-width: 400px;
+  padding: 0 10px 10px 0;
 }
 
 input {
-  max-width: 400px;
+  width: 100%;
   height: 30px;
   padding-left: 5px;
   outline: none;
+  box-sizing: border-box;
   border: 1px solid #557a95;
   border-radius: 5px;
 }
