--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ a {
 }
 
 button {
-  max-width: 70px;
-  padding: 5px 0;
+  padding: 5px 10px;
   background: #5d5c61;
   color: #f5f5f5;
   font-weight: 800;
@@ -46,5 +45,10 @@ button {
   display: flex;
   flex-direction: column;
   margin: 10px 0 0 10px;
+  gap: 10px;
+}
+
+.btn-container {
+  display: flex;
   gap: 10px;
 }
