--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ button {
   cursor: pointer;
 }
 
+#delete-btn {
+  background: #f5f5f5;
+  color: #5d5c61;
+  border: 1px solid #5d5c61;
+}
+
 .content-container {
   display: flex;
   flex-direction: column;
